# practice-markdown

./: README.css  README.html  README.md  README2.css  template.html
mathsymbol/: README.md
sample/: .gitignore  README.md  haskell-data-structures.cabal
sample/app/: Main.hs
sample/src/DataStructures/: BinaryTree.hs
sample/src/DataStructures/BinaryTree/: BinaryTree.hs  README.md
sample/test/: Test.hs
