cabal-version:      3.0
name:               haskell-data-structures
version:            0.1.0.0
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple
extra-doc-files:    README.md

library
  exposed-modules:
    DataStructures.Stack
    DataStructures.Queue
    DataStructures.BinaryTree
    DataStructures.LinkedList
  build-depends:
    base >=4.14 && <5.0
  default-language: Haskell2010
  hs-source-dirs:   src
  other-modules:
    DataStructures.Stack.Stack
    DataStructures.Queue.Queue
    DataStructures.BinaryTree.BinaryTree
    DataStructures.LinkedList.LinkedList

executable haskell-data-structures
  main-is:          Main.hs
  build-depends:
    base >=4.14 && <5.0
    , haskell-data-structures
  default-language: Haskell2010
  hs-source-dirs:   app

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:
    base >=4.14 && <5.0
    , haskell-data-structures
  default-language: Haskell2010
  hs-source-dirs:   test

